# blocklang-installer

./: .appveyor.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
doc/API/: 01_softwares.md
docs/: BlockLang.pptx  commands.md
docs/API/: 01_installers.md  02_apps.md  02_softwares.md
docs/install/: windows.md
docs/test_case/: README.md
src/: command.rs  config.rs  download_config.rs  installer_config.rs  jar.rs  lib.rs  main.rs  util.rs
src/http/: client.rs
src/util/: mod.rs  net.rs  os.rs  process.rs  zip.rs
tests/: cli.rs
