[package]
name = "installer"
version = "0.2.0"
authors = ["金正伟 <76711619@qq.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.17"
reqwest = "0.9.17"
zip = "0.5.2"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
toml = "0.5.1"
version-compare = "0.0.8"
os_info = "1.1.1"
ipconfig = "0.2.0"
mac_address = "1.0.0"
get_if_addrs = "0.5.3"
platforms = "0.2.0"
prettytable-rs = "0.8.0"
indicatif = "0.11.0"
url = "1.7.2"

[dev-dependencies]
tempfile = "3.0.8"
assert_cmd = "0.11.1"
predicates = "1.0.1"
mockito = "0.17.1"
