[package]
name = "installer"
version = "0.2.0"
authors = ["金正伟 <76711619@qq.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.18"
reqwest = "0.9.18"
zip = "0.5.2"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
toml = "0.5.1"
version-compare = "0.0.9"
os_info = "1.1.1"
ipconfig = "0.2.1"
mac_address = "1.0.0"
get_if_addrs = "0.5.3"
platforms = "0.2.0"
prettytable-rs = "0.8.0"
indicatif = "0.11.0"
url = "1.7.2"

[dev-dependencies]
tempfile = "3.1.0"
assert_cmd = "0.11.1"
predicates = "1.0.1"
mockito = "0.17.1"
