[package]
name = "installer"
version = "0.2.0"
authors = ["金正伟 <76711619@qq.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.3"
reqwest = "0.9.22"
zip = "0.5.3"
serde = "1.0.101"
serde_derive ="1.0.101"
serde_json ="1.0.41"
toml = "0.5.3"
version-compare = "0.0.10"
os_info ="1.1.2"
ipconfig = "0.2.1"
mac_address = "1.0.2"
get_if_addrs = "0.5.3"
platforms = "0.2.1"
prettytable-rs = "0.8.0"
indicatif = "0.12.0"
url = "2.1.0"

[dev-dependencies]
tempfile = "3.1.0"
assert_cmd = "0.11.1"
predicates = "1.0.1"
mockito = "0.21.0"
